# obsidian-rag

./: .env.template  .gitignore  .gitmodules  README.md  app.py  embedding.py  main.py  obsidian_rag.ipynb  obsidian_rag.py  obsidian_rag_local.ipynb  obsidian_rag_local_v2.ipynb  pyproject.toml  requirements.txt
document_loaders/: obsidian.py
faiss_index/: index.faiss  index.pkl
helper/: constants.py  initialize_embeddings.py  load_config.py  rag.py  utils.py
prompts/: obsidian_rag.yaml
