[tool.poetry]
name = "obsidian-rag"
version = "0.1.0"
description = ""
authors = ["anpigon <markan82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.3.2"
langgraph = "^0.2.34"
langchainhub = "^0.1.21"
langchain-core = "^0.3.8"
langchain_chroma = "^0.1.4"
langchain_community = "^0.3.1"
langchain_text_splitters = "^0.3.0"
langchain-teddynote = "^0.0.34"
langchain-huggingface = "^0.1.0"
langchain-groq = "^0.2.0"
langchain-upstage = "^0.3.0"
langchain-cohere = "^0.3.0"
langchain-google-genai = "^2.0.0"
sentence_transformers = "^3.1.1"
markdown = "^3.7"
chromadb = "^0.5.11"
streamlit = "^1.39.0"
flagembedding = "^1.2.11"
python-dotenv = "^1.0.1"
unstructured = "^0.15.13"
streamlit-extras = "^0.4.7"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
